cmd/situ-vault-kustomize/testdata/example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: the-container
          image: monopole/hello:1
          command:
            - "/hello"
            - "--port=8080"
            - "--enableRiskyFeature=$(ENABLE_RISKY)"
          ports:
            - containerPort: 8080
          env:
            - name: ALT_GREETING
              valueFrom:
                secretKeyRef:
                  name: secret-one
                  key: greeting
            - name: ENABLE_RISKY
              valueFrom:
                secretKeyRef:
                  name: secret-one
                  key: risky_flag
