cmd/situ-vault-kustomize/testdata/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8666
      targetPort: 8080
